--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "description": "",
   "main": "gulpfile.js.js",
   "devDependencies": {
-    "@babel/core": "7.7.4",
-    "@babel/plugin-proposal-class-properties": "7.13.0",
-    "@babel/preset-env": "7.7.4",
-    "autoprefixer": "9.8.4",
+    "@babel/core": "7.16.0",
+    "@babel/plugin-proposal-class-properties": "7.16.0",
+    "@babel/preset-env": "7.16.0",
+    "autoprefixer": "9.8.8",
     "babel": "6.23.0",
     "babel-core": "6.26.3",
-    "babel-loader": "8.0.6",
-    "browser-sync": "2.26.7",
-    "core-js": "3.4.2",
+    "babel-loader": "8.2.3",
+    "browser-sync": "2.27.7",
+    "core-js": "3.19.1",
     "css-mqpacker": "7.0.0",
     "del": "5.1.0",
-    "gulp": "^4.0.2",
+    "gulp": "4.0.2",
     "gulp-csso": "4.0.1",
     "gulp-imagemin": "7.1.0",
     "gulp-less": "4.0.1",
@@ -31,7 +31,7 @@
     "normalize.less": "1.0.0",
     "run-sequence": "2.2.1",
     "vinyl-named": "1.1.0",
-    "webpack": "4.41.2",
+    "webpack": "4.46.0",
     "webpack-stream": "5.2.1"
   },
   "scripts": {
